--- a/RentABookPlanner/RentABookPlanner/RentABookPlanner.csproj
+++ b/RentABookPlanner/RentABookPlanner/RentABookPlanner.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAL\Book.cs" />
+    <Compile Include="DAL\IReader.cs" />
     <Compile Include="Services\BookReader.cs" />
     <Compile Include="DAL\BookRequest.cs" />
     <Compile Include="Controller\BookRequestController.cs" />
